hol reorder and rearrange

--- a/Lab03/3_3_unbuntu-flask/Dockerfile
+++ b/Lab03/3_3_unbuntu-flask/Dockerfile
@@ -1,10 +1,14 @@
-FROM mypython3:base
+FROM ubuntu:python3
 MAINTAINER byjeon <byjeon@miracom.co.kr>
 
+# flask
 RUN pip3 install flask
 
+# Add a service file
 ADD hello.py /apps/hello.py
 
-EXPOSE 80
+# Expose Network
+EXPOSE 5000
 
+# Execute a Service
 CMD ["python3", "/apps/hello.py"]
