--- a/Lab03/3_2_ubuntu-python3/Dockerfile
+++ b/Lab03/3_2_ubuntu-python3/Dockerfile
@@ -1,6 +1,8 @@
 FROM myubuntu:16.04
 MAINTAINER byjeon <byjeon@miracom.co.kr>
 
+# Install Python3
 RUN apt-get install -y python3 python3-pip
 
+# Running python3 REPL
 CMD ["python3"]
