--- a/Lab03/3_3_unbuntu-flask/Dockerfile
+++ b/Lab03/3_3_unbuntu-flask/Dockerfile
@@ -1,14 +1,14 @@
 FROM ubuntu:python3
-MAINTAINER byjeon <byjeon@miracom.co.kr>
+MAINTAINER byjeon <mysummit@gmail.com>
 
-# flask
+# Install the flask package
 RUN pip3 install flask
 
 # Add a service file
 ADD hello.py /apps/hello.py
 
-# Expose Network
+# Expose a network port
 EXPOSE 5000
 
-# Execute a Service
+# Running the service
 CMD ["python3", "/apps/hello.py"]
