modified Lab03 added Lab04 and Lab05

--- a/Lab03/1_busybox-custom/Dockerfile
+++ b/Lab03/1_busybox-custom/Dockerfile
@@ -1,5 +1,8 @@
-FROM busybox
+FROM genesis
 MAINTAINER byjeon <mysummit@gmail.com>
 
 # set env
-ENV foo=bar
+ENV HOME_DIR=/home
+WORKDIR $HOME_DIR
+
+CMD ["/bin/sh"]
